--- a/overlay/Frameworks/res/values/dimens.xml
+++ b/overlay/Frameworks/res/values/dimens.xml
@@ -4,11 +4,15 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
+    <!-- Default paddings for content around the corners. -->
+    <dimen name="rounded_corner_content_padding">36px</dimen>
+
     <!-- Radius of the software rounded corners at the top of the display in its natural
         orientation. If zero, the value of rounded_corner_radius is used. -->
-    <dimen name="rounded_corner_radius_top">120.0px</dimen>
+    <dimen name="rounded_corner_radius_top">90.0px</dimen>
 
     <!-- Radius of the software rounded corners at the bottom of the display in its natural
         orientation. If zero, the value of rounded_corner_radius is used. -->
-    <dimen name="rounded_corner_radius_bottom">120.0px</dimen>
+    <dimen name="rounded_corner_radius_bottom">90.0px</dimen>
 </resources>
