--- a/overlay/SettingsProviderCN/res/values/defaults.xml
+++ b/overlay/SettingsProviderCN/res/values/defaults.xml
@@ -4,6 +4,6 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Do not translate. Default access point SSID used for tethering -->
-    <string name="wifi_tether_configure_ssid_default" translatable="false">Xiaomi 12T Pro</string>
+    <!-- Default for Settings.Global.DEVICE_NAME $1=MODEL-->
+    <string name="def_device_name_simple">Redmi K50 Ultra</string>
 </resources>
