--- a/overlay/SettingsProviderGL/res/values/defaults.xml
+++ b/overlay/SettingsProviderGL/res/values/defaults.xml
@@ -5,5 +5,5 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Default for Settings.Global.DEVICE_NAME $1=MODEL-->
-    <string name="def_device_name_simple">POCO F5 Pro</string>
+    <string name="def_device_name_simple">Xiaomi 12T Pro</string>
 </resources>
