diting: Define statusbar paddings
Change-Id: Ia985a6cc59caaaae5aabbddca0c24418b826c8d2

--- a/overlay/SystemUI/res/values/dimens.xml
+++ b/overlay/SystemUI/res/values/dimens.xml
@@ -6,6 +6,9 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <dimen name="keyguard_indication_margin_bottom">16dp</dimen>
 
+    <!-- The padding around the statusbar -->
+    <dimen name="status_bar_padding_top">22px</dimen>
+
     <!-- Location on the screen of the center of the physical power button. This is a reasonable
     default that should be overridden by device-specific overlays. -->
     <dimen name="physical_power_button_center_screen_location_y">1180px</dimen>
