--- a/overlay/Frameworks/res/values/dimens.xml
+++ b/overlay/Frameworks/res/values/dimens.xml
@@ -5,6 +5,11 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Height of the status bar.
+         Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
+    -->
+    <dimen name="status_bar_height_portrait">88px</dimen>
+
     <!-- Default paddings for content around the corners. -->
     <dimen name="rounded_corner_content_padding">36px</dimen>
 
